<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">test908</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="time_passed">Passed %1$s with</string>
    <!--  Error messages  -->
    <string name="Error">Error</string>
    <string name="loading_data_please_wait">Loading data, please wait</string>
    <string name="sorry_connection_error">Sorry connection error</string>
    <string name="sorry_something_went_wrong">Sorry something went wrong</string>
    <string name="review">Review</string>
    <string name="title_name_reviews">title</string>
    <string name="body_name_reviews">body</string>
    <string name="name_author_reviews">author</string>
    <string name="date_reviews">date</string>
    <string name="name_shop_books">name shop</string>
    <string name="name_author_books">name author</string>
    <string name="books">Books</string>
    <string name="shop_item_books">Shop</string>
    <string name="body_books">body</string>
    <string name="limited_series">Limited Series</string>
    <string name="get_started">Get started</string>
    <string name="body_banner_ui">Start you treasure with limited book series with our new service</string>
    <string name="title_banner_ui">Limited Series!!!</string>
    <string name="text_bottom_green_banner">Continue</string>
    <!--  Bottom sheet   -->
    <string name="title_text_bottom_sheet">Complete your limited series sing up</string>
    <string name="body_text_bottom_sheet">Do you have a promo code?></string>
    <string name="bottom_text_bottom_sheet">Complete?</string>
    <string name="edit_text_bottom_sheet">Enter your promo code</string>
    <!--  Bottom sheet reviews   -->
    <string name="sort_date">Sort date by</string>
    <string name="ascending_bottom_sheet">Ascending</string>
    <string name="descending_bottom_sheet">Descending</string>
    <string name="sort_by_favorite_bottom_shett">Sort by favorite</string>
    <string name="favorite_bottom_sheet">Favorite</string>
    <string name="rest_all_bottom_sheet">Rest All</string>
    <string name="apply_bottom_sheet">Apply</string>
</resources>

